Updates sass and removes some stylesheets

--- a/css/theme/source/gisinc.scss
+++ b/css/theme/source/gisinc.scss
@@ -20,13 +20,13 @@
 
 
 // Override theme settings (see ../template/settings.scss)
-$mainFont:  "Open Sans", sans-serif;
+$mainFont:  "Trebuchet", sans-serif;
 $mainColor: #eeeeee;
-$headingFont: "Montserrat", sans-serif;
+$headingFont: "Trebuchet", sans-serif;
 $headingColor: #eeeeee;
 $headingTextShadow: none;
 $headingTextTransform: none;
-$backgroundColor: #20396d;
+$backgroundColor: #213A6E;
 $linkColor: #f15a23;
 //$linkColorHover: lighten( $linkColor, 20% ); //color .15s ease
 //$selectionBackgroundColor: rgba(0, 0, 0, 0.99);
